--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
   "owner": "Dip To",
-  "fb_ID":"ADD_YOUR_FACEBOOK_ID",
-  "adminName": "Dip To",
+  "fb_ID":"https://www.facebook.com/mdsakhoyat.hosen.9",
+  "adminName": "Ex 卝 বয়ফ্রেন্ডヅ",
   "botName": "Your Baby",
   "token": "ADD_YOUR_BOT_TOKEN_HERE",
 "mongodbURI":"mongodb+srv://userg4185:zWfR3c1ez5zpAUj0@cluster0.mfbe2.mongodb.net/botbee?retryWrites=true&w=majority&appName=Cluster0",
   "notes":"ADD_YOUR_MONGO_DB_URI for fast response. and if you don't know how to collect mongo uri then see this For database. MongooDB uri => https://drive.google.com/file/d/10AxcIiFQuI9S2gMBwV_i4U8UogMJX8pD/view?usp=drivesdk",
-  "prefix": "!",
+  "prefix": ".",
   "api": "https://www.noobs-api.000.pe/dipto",
   "database": {
     "mongo": true,
@@ -22,7 +22,7 @@
   "white_list_group": {
     "enable": false,
     "groups": [
-      -1001234567890
+      -100072320790038
     ]
   },
   "white_list_ID": {
