--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.2.0",
+    "fca-shankar-bot": "^19.0.0",
     "gradient-string": "^2.0.2",
     "mal-scraper": "^2.13.1",
     "moment-timezone": "^0.5.45",
