--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "owner": "SMART SHANKAR",
   "fb_ID":"https://www.facebook.com/mdsakhoyat.hosen.9",
-  "adminName": "Ex 卝 বয়ফ্রেন্ডヅ",
+  "adminName": "SMART SHANKAR",
   "botName": "Your Baby",
-  "token": "",
+  "token": "7021520230:AAEqZYo-IfQ2_-0NMnET9RM-5dHMkaaF0YU",
 "mongodbURI":"mongodb+srv://userg4185:zWfR3c1ez5zpAUj0@cluster0.mfbe2.mongodb.net/botbee?retryWrites=true&w=majority&appName=Cluster0",
   "notes":"ADD_YOUR_MONGO_DB_URI for fast response. and if you don't know how to collect mongo uri then see this For database. MongooDB uri => https://drive.google.com/file/d/10AxcIiFQuI9S2gMBwV_i4U8UogMJX8pD/view?usp=drivesdk",
   "prefix": ".",
